# deeplearning-training

./: .gitignore  README.md
deeplearningai-langchain/: Makefile  README.md  environment.yml  pyproject.toml
deeplearningai-langchain-chatwithyourdata/: Makefile  README.md  environment.yml  pyproject.toml
deeplearningai-langchain-chatwithyourdata/notebooks/: 06-rlc-chat.ipynb
deeplearningai-langchain/notebooks/: 1.0-rlc-models-prompts-parsers.ipynb  2.0-rlc-memory.ipynb  3.0-rlc-chains.ipynb  4.0-rlc-questions-and-answers.ipynb  5.0-rlc-evaluation.ipynb  6.0-rlc-agents.ipynb
platzi-anaconda/: Makefile  README.md  environment.yml  example.ipynb  platzi-anaconda.md  pyproject.toml  sales.csv
platzi-anaconda/notebooks/: 1.0-rlc-example.ipynb
platzi-anaconda/platzi_anaconda/: dataset.py  plots.py
platzi-langchain/: Makefile  README.md  environment.yml  pyproject.toml
platzi-langchain/notebooks/: 1.0-rlc-helloworld.ipynb
platzi-langchain/platzi_langchain/: extraction.py  load.py  models.py  transformation.py
