[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "platzi_langchain"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Ricardo Leon Correia" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["platzi_langchain"]
include = ["pyproject.toml", "platzi_langchain/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["platzi_langchain"]
force-sort-within-sections = true

